# CFPackages

./: .gitignore  README.md  build.cmd  build_wheel.py  pyproject.toml  requirements.txt
cfpackages/: __init__.py  file_utils.py  http_utils.py  logger_formatter.py  text_ui.py  unix_utils.py  win_utils.py
