[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfpackages"
version = "0.1.4"
authors = [
    {name = "chengfeng3012", email = "chengfeng3012@163.com"},
]
description = "一个供我自己使用的实用的 python 第三方库"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "colorama",
    "prompt_toolkit",
    "questionary",
    "requests",
    "pywin32; sys_platform == 'win32'"
]
